// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField should be tolerant of an undefined value prop 1`] = `
<div
  className="control-group"
>
  <label
    htmlFor="someInput"
  >
    Some Input
  </label>
  <input
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here..."
    type="text"
    value=""
  />
</div>
`;

exports[`InputField should display errors if touched 1`] = `
<div
  className="control-group"
>
  <input
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`InputField should render 1`] = `
<div
  className="control-group"
>
  <label
    htmlFor="someInput"
  >
    Some Input
  </label>
  <input
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here..."
    type="text"
    value="something"
  />
</div>
`;
